# CMOD

./: .gitignore  LICENSE.md  README.md  enviroment.yml  environment.yml  pyproject.toml
M84/py_scripts/: py_psf.py  (+1 more)
M84_V5/: psf_M84_large.fits  psf_M84_large.script  psf_M84_large_flux_norm.fits  py_galfit_3D.py  py_move_plots.py  py_plot_galfit_mag_ser_effrad.py  py_plot_ratios_ser_effrad.py  py_psf.py  sh_galfit_auto.sh  txt_M84_constraints.txt  txt_M84_total_time.txt
config/: txt_Configuration_file.txt  txt_M84_initial_params.txt
legacy_scripts/: sh_galfit_auto_single.sh  sh_versions_remove.sh
py_CMOD_scripts/: py_CMOD.py  py_analysis.py  py_convert_functions.py  py_dataframe.py  py_initial_condition.py  py_isophote_fitting.py  py_plot_analysis.py  py_plot_configration.py  py_plot_general.py  py_plot_images.py  py_plot_profiles.py  py_psf.py  py_version_control.py
py_modular/: py_psf.py
py_scripts/: README.md  py_galfit_3D.py  py_galfit_3D_medfilt_inout.py  py_move_plots.py  py_plot_galfit_all.py  py_plot_galfit_mag_ser_effrad.py  py_plot_galfit_pos_axrat_posang.py  sh_galfit_auto.sh
py_scripts_external/: py_galfit_3D.py  py_galfit_initial_params.py  py_galfit_initial_params_script.py  py_move_plots.py  py_plot_galfit_all.py  py_version_control.py  sh_galfit_auto.sh  sh_galfit_auto_global.sh  sh_galfit_auto_single.sh  sh_scripts_copy.sh  sh_scripts_remove.sh
py_scripts_version_3/: py_galfit_3D.py  py_galfit_constraints_values.py  py_move_plots_global.py  sh_galfit_auto_global.sh
scripts/: py_CMOD.py  py_analysis.py  py_config_argparse.py  run_cmod.py
(+70 files in other folders)
